--- a/index.html
+++ b/index.html
@@ -3376,6 +3376,7 @@
         function updateThemeIcon(){const isDark=document.body.getAttribute('data-theme')==='dark';document.getElementById('themeIcon').className=isDark?'fas fa-sun':'fas fa-moon';document.getElementById('themeText').textContent=isDark?'Modo Claro':'Modo Oscuro';}
         
         function initTheme(){const t=localStorage.getItem('theme')||'light';document.body.setAttribute('data-theme',t);updateThemeIcon();}
+        function formatLocalDate(date){return `${date.getFullYear()}-${String(date.getMonth()+1).padStart(2,'0')}-${String(date.getDate()).padStart(2,'0')}`;}
 
         function toggleSidebar(){document.body.classList.toggle('sidebar-open');}
         function closeSidebar(){document.body.classList.remove('sidebar-open');}
@@ -3385,8 +3386,9 @@
         document.addEventListener('DOMContentLoaded', () => { 
             initTheme();initKeyboardShortcuts();initOfflineSupport();runFirestoreHealthCheck();
             const t=new Date(); const yyyy=t.getFullYear(); const mm=String(t.getMonth()+1).padStart(2,'0');
-            document.getElementById('dashboardMonth').value=`${yyyy}-${mm}`;document.getElementById('fecha').valueAsDate=t;
-            const firstDay=`${yyyy}-${mm}-01`;const lastDay=new Date(yyyy,t.getMonth()+1,0).toISOString().split('T')[0];
+            const todayLocal=new Date(yyyy, t.getMonth(), t.getDate());
+            document.getElementById('dashboardMonth').value=`${yyyy}-${mm}`;document.getElementById('fecha').valueAsDate=todayLocal;
+            const firstDay=`${yyyy}-${mm}-01`;const lastDay=formatLocalDate(new Date(yyyy,t.getMonth()+1,0));
             document.getElementById('filterStart').value=firstDay;document.getElementById('filterEnd').value=lastDay;
             document.getElementById('goalDeadline').value=lastDay;
             loadCards();loadGoals();
@@ -3461,7 +3463,7 @@
             const yyyy = t.getFullYear();
             const mm = String(t.getMonth()+1).padStart(2,'0');
             document.getElementById('filterStart').value = `${yyyy}-${mm}-01`;
-            document.getElementById('filterEnd').value = new Date(yyyy, t.getMonth() + 1, 0).toISOString().split('T')[0];
+            document.getElementById('filterEnd').value = formatLocalDate(new Date(yyyy, t.getMonth() + 1, 0));
             renderHistory();
         }
 
@@ -4275,7 +4277,6 @@
                 if(!c||c<=0){showToast('Completa cuotas válidas','error');alert('Completa cuotas válidas');return;}
                 const today=new Date();
                 const todayLocal=new Date(today.getFullYear(), today.getMonth(), today.getDate());
-                const formatLocalDate=(date)=>`${date.getFullYear()}-${String(date.getMonth()+1).padStart(2,'0')}-${String(date.getDate()).padStart(2,'0')}`;
                 const fechaPrimerPago=formatLocalDate(todayLocal);
                 let proximaPago=buildPaymentDate(todayLocal.getFullYear(), todayLocal.getMonth(), paymentDay);
                 if(proximaPago < todayLocal){
